--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 		</section>
 		<section class="section-description">
 			<div class="section-description__icon-box">
-				<img src="icons/01-Иконка.svg" alt="">
-				<img src="icons/02-Иконка.svg" alt="">
-				<img src="icons/03-Иконка.svg" alt="">
+				<img src="icons/01-icon.svg" alt="">
+				<img src="icons/02-icon.svg" alt="">
+				<img src="icons/03-icon.svg" alt="">
 				<!-- Можно ввести: img*3 и VSC выполнит команду три раза -->
 			</div>
 			<div class="section-description__text-box">
