--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!--Данный мета-тег появился после разработок Apple, которые начали производить айфоне, 
+для которые была необходима адаптация. Тег помогает подстраивать (!) браузер под размеры 
+экрана, он также помогает масштабировать некоторые элементы. Должен быть всегда-->
 	<link rel="stylesheet" href="CSS/reset.css">
 	<link rel="stylesheet" href="CSS/normalize.css">
 	<link rel="stylesheet" href="CSS/style.css">
